--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
+video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 .App {
-  text-align: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    margin: -30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+}
+
+.search {
+    width: 100%;
+    background-color: transparent;
+    font-size: 14px;
+    line-height: 18px;
+    color: #575756;
+    margin-left: 0px;
+    box-shadow: inset 0px 0px 0px 4px #ddd6e8;
+    padding: 12px 24px;
+    cursor: pointer;
+    border: none;
+}
+
+.input {
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.icon {
+  width: 32px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.recipe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+  width: 400px;
+} 
+
+.tasty {
+  box-shadow:  20px 20px 60px #433f3f;
+  margin-top: 10px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  font-weight: bold;
+}
+
+button {
+  border: none;
+  border-radius: 12px;
+  width: 55px;
+  height: 45px;
+  cursor: pointer;
+}
+
+h2 {
+  margin-top: 30px;
+}
+
+h1, h2, ul, p {
+  font-family: 'Open Sans', sans-serif;
+}
+
+p {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 48px;
 }
