--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ video {
   z-index: -1;
 }
 
+form {
+  display: flex;
+}
+
 .App {
     background-color: rgba(255, 255, 255, 0.5);
     margin: -30px;
@@ -64,7 +68,8 @@ ul {
 
 button {
   border: none;
-  border-radius: 12px;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
   width: 55px;
   height: 45px;
   cursor: pointer;
